@@ -83,6 +83,10 @@ Trunk (unreleased changes)
 
   BUG FIXES
 
+    HADOOP-1887. The Namenode encounters an ArrayIndexOutOfBoundsException
+    while listing a directory that had a file that was
+    being actively written to.  (Dhruba Borthakur via dhruba)
+
     HADOOP-1904. The Namenode encounters an exception because the
     list of blocks per datanode-descriptor was corrupted.
     (Konstantin Shvachko via dhruba)
